--- a/codebook_df.html
+++ b/codebook_df.html
@@ -600,7 +600,7 @@ body {
 
 <body>
 
-<h1 id="codebook-created-on-2021-02-06-at-2021-02-06-113518">Codebook created on 2021-02-06 at 2021-02-06 11:35:18</h1>
+<h1 id="codebook-created-on-2021-02-06-at-2021-02-06-121502">Codebook created on 2021-02-06 at 2021-02-06 12:15:02</h1>
 <p>A codebook contains documentation and metadata describing the contents, structure, and layout of a data file.</p>
 <h2 id="dataset-description">Dataset description</h2>
 <p>The data contains 2648 cases and 25 variables.</p>
@@ -851,123 +851,123 @@ body {
 </tr>
 <tr class="even">
 <td align="left">CDE7_NEW</td>
-<td align="left">factor</td>
+<td align="left">integer</td>
 <td align="right">2610</td>
 <td align="right">0.01</td>
 <td align="right">4</td>
+<td align="right">1.94</td>
+<td align="right">2</td>
+<td align="right">2</td>
+<td align="left"></td>
+<td align="right">0.81</td>
 <td align="right"></td>
-<td align="right"></td>
-<td align="right">945</td>
-<td align="left">= “No”</td>
-<td align="right"></td>
-<td align="right">0.66</td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
+<td align="right">1</td>
+<td align="right">3</td>
+<td align="right">2</td>
+<td align="right">0.11</td>
+<td align="right">1.14</td>
+<td align="right">-1.48</td>
+<td align="right">-7.72</td>
 </tr>
 <tr class="odd">
 <td align="left">CDE8</td>
-<td align="left">factor</td>
+<td align="left">integer</td>
 <td align="right">2584</td>
 <td align="right">0.02</td>
 <td align="right">8</td>
+<td align="right">3.66</td>
+<td align="right">4</td>
+<td align="right">4</td>
+<td align="left"></td>
+<td align="right">1.74</td>
 <td align="right"></td>
-<td align="right"></td>
-<td align="right">534</td>
-<td align="left">likely</td>
-<td align="right"></td>
-<td align="right">0.83</td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
+<td align="right">1</td>
+<td align="right">7</td>
+<td align="right">6</td>
+<td align="right">0.08</td>
+<td align="right">0.84</td>
+<td align="right">-0.79</td>
+<td align="right">-4.12</td>
 </tr>
 <tr class="even">
 <td align="left">CDE9</td>
-<td align="left">factor</td>
+<td align="left">integer</td>
 <td align="right">2431</td>
 <td align="right">0.08</td>
 <td align="right">4</td>
+<td align="right">2.38</td>
+<td align="right">3</td>
+<td align="right">3</td>
+<td align="left"></td>
+<td align="right">0.70</td>
 <td align="right"></td>
-<td align="right"></td>
-<td align="right">1248</td>
-<td align="left">I thought that death was probable or certain</td>
-<td align="right"></td>
-<td align="right">0.59</td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
+<td align="right">1</td>
+<td align="right">3</td>
+<td align="right">2</td>
+<td align="right">-0.70</td>
+<td align="right">-7.02</td>
+<td align="right">-0.74</td>
+<td align="right">-3.70</td>
 </tr>
 <tr class="odd">
 <td align="left">CDE10</td>
-<td align="left">factor</td>
+<td align="left">integer</td>
 <td align="right">2436</td>
 <td align="right">0.08</td>
 <td align="right">4</td>
+<td align="right">2.41</td>
+<td align="right">3</td>
+<td align="right">3</td>
+<td align="left"></td>
+<td align="right">0.67</td>
 <td align="right"></td>
-<td align="right"></td>
-<td align="right">1246</td>
-<td align="left">I believed what I did equaled or exceeded what would be lethal</td>
-<td align="right"></td>
-<td align="right">0.58</td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
+<td align="right">1</td>
+<td align="right">3</td>
+<td align="right">2</td>
+<td align="right">-0.70</td>
+<td align="right">-7.01</td>
+<td align="right">-0.62</td>
+<td align="right">-3.15</td>
 </tr>
 <tr class="even">
 <td align="left">CDE11</td>
-<td align="left">factor</td>
+<td align="left">integer</td>
 <td align="right">2461</td>
 <td align="right">0.07</td>
 <td align="right">4</td>
+<td align="right">2.44</td>
+<td align="right">2</td>
+<td align="right">2</td>
+<td align="left"></td>
+<td align="right">0.59</td>
 <td align="right"></td>
-<td align="right"></td>
-<td align="right">1200</td>
-<td align="left">I intended to die.</td>
-<td align="right"></td>
-<td align="right">0.55</td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
+<td align="right">1</td>
+<td align="right">3</td>
+<td align="right">2</td>
+<td align="right">-0.50</td>
+<td align="right">-5.06</td>
+<td align="right">-0.66</td>
+<td align="right">-3.36</td>
 </tr>
 <tr class="odd">
 <td align="left">CDE12</td>
-<td align="left">factor</td>
+<td align="left">integer</td>
 <td align="right">2416</td>
 <td align="right">0.09</td>
 <td align="right">4</td>
+<td align="right">2.04</td>
+<td align="right">2</td>
+<td align="right">2</td>
+<td align="left"></td>
+<td align="right">0.73</td>
 <td align="right"></td>
-<td align="right"></td>
-<td align="right">1127</td>
-<td align="left">I was uncertain whether death could be avoided by medical attention</td>
-<td align="right"></td>
-<td align="right">0.64</td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
+<td align="right">1</td>
+<td align="right">3</td>
+<td align="right">2</td>
+<td align="right">-0.06</td>
+<td align="right">-0.63</td>
+<td align="right">-1.12</td>
+<td align="right">-5.63</td>
 </tr>
 <tr class="even">
 <td align="left">CDE13</td>
@@ -1031,23 +1031,23 @@ body {
 </tr>
 <tr class="odd">
 <td align="left">CDE16</td>
-<td align="left">factor</td>
+<td align="left">integer</td>
 <td align="right">2214</td>
 <td align="right">0.16</td>
 <td align="right">6</td>
+<td align="right">2.79</td>
+<td align="right">3</td>
+<td align="right">3</td>
+<td align="left"></td>
+<td align="right">1.53</td>
 <td align="right"></td>
-<td align="right"></td>
-<td align="right">793</td>
-<td align="left">No medical attention required</td>
-<td align="right"></td>
-<td align="right">0.75</td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
-<td align="right"></td>
+<td align="right">1</td>
+<td align="right">5</td>
+<td align="right">4</td>
+<td align="right">0.05</td>
+<td align="right">0.49</td>
+<td align="right">-1.47</td>
+<td align="right">-7.06</td>
 </tr>
 <tr class="even">
 <td align="left">CDE17</td>
