--- a/manuscript/manuscript.html
+++ b/manuscript/manuscript.html
@@ -735,9 +735,6 @@ of participants per latent class (based on posterior class probability).
 </tbody>
 </table>
 <p>Table 3: Class differences in continuous auxiliary variables.</p>
-<pre><code>## Error in `[.data.frame`(x$parameters, , c(&quot;class&quot;, &quot;category&quot;, &quot;prob&quot;, : undefined columns selected
-
-## Error in grep(i, cats$Variable):(grep(i, cats$Variable) + (length(test_res[[i]]) - : argument of length 0</code></pre>
 <table>
 <thead>
 <tr class="header">
@@ -757,107 +754,107 @@ of participants per latent class (based on posterior class probability).
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"></td>
+<td align="left">Gender (cov)</td>
 <td align="left">Female</td>
-<td align="left">0.329</td>
-<td align="left">0.015</td>
-<td align="left">[0.30, 0.36]</td>
-<td align="left">0.458</td>
-<td align="left">0.019</td>
-<td align="left">[0.42, 0.50]</td>
-<td align="left">25.827</td>
+<td align="left">0.305</td>
+<td align="left">0.014</td>
+<td align="left">[0.28, 0.33]</td>
+<td align="left">0.429</td>
+<td align="left">0.017</td>
+<td align="left">[0.40, 0.46]</td>
+<td align="left">28.395</td>
 <td align="left">0.000</td>
-<td align="right">0.12</td>
+<td align="right">0.11</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">Male</td>
-<td align="left">0.671</td>
-<td align="left">0.015</td>
-<td align="left">[0.64, 0.70]</td>
-<td align="left">0.542</td>
-<td align="left">0.019</td>
-<td align="left">[0.50, 0.58]</td>
+<td align="left">0.695</td>
+<td align="left">0.014</td>
+<td align="left">[0.67, 0.72]</td>
+<td align="left">0.571</td>
+<td align="left">0.017</td>
+<td align="left">[0.54, 0.60]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
+<td align="left">Race (cov)</td>
 <td align="left">Asian</td>
-<td align="left">0.022</td>
+<td align="left">0.024</td>
 <td align="left">0.005</td>
 <td align="left">[0.01, 0.03]</td>
-<td align="left">0.034</td>
-<td align="left">0.007</td>
-<td align="left">[0.02, 0.05]</td>
-<td align="left">13.789</td>
 <td align="left">0.032</td>
+<td align="left">0.006</td>
+<td align="left">[0.02, 0.04]</td>
+<td align="left">14.851</td>
+<td align="left">0.021</td>
 <td align="right">0.08</td>
-<td align="left"></td>
+<td align="left">0.339</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">Black/African American</td>
-<td align="left">0.151</td>
-<td align="left">0.012</td>
+<td align="left">0.147</td>
+<td align="left">0.011</td>
 <td align="left">[0.13, 0.17]</td>
-<td align="left">0.181</td>
-<td align="left">0.014</td>
-<td align="left">[0.15, 0.21]</td>
+<td align="left">0.187</td>
+<td align="left">0.013</td>
+<td align="left">[0.16, 0.21]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.031</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">Multiracial</td>
-<td align="left">0.029</td>
+<td align="left">0.027</td>
 <td align="left">0.005</td>
 <td align="left">[0.02, 0.04]</td>
-<td align="left">0.012</td>
+<td align="left">0.013</td>
 <td align="left">0.004</td>
-<td align="left">[0.00, 0.02]</td>
+<td align="left">[0.01, 0.02]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.039</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">Native American/Native Alaskan</td>
-<td align="left">0.018</td>
+<td align="left">0.020</td>
 <td align="left">0.004</td>
 <td align="left">[0.01, 0.03]</td>
-<td align="left">0.011</td>
-<td align="left">0.004</td>
+<td align="left">0.010</td>
+<td align="left">0.003</td>
 <td align="left">[0.00, 0.02]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.072</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">Other (sometimes Hispanic)</td>
-<td align="left">0.080</td>
+<td align="left">0.094</td>
 <td align="left">0.009</td>
-<td align="left">[0.06, 0.10]</td>
-<td align="left">0.087</td>
+<td align="left">[0.08, 0.11]</td>
+<td align="left">0.098</td>
 <td align="left">0.010</td>
-<td align="left">[0.07, 0.11]</td>
+<td align="left">[0.08, 0.12]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.741</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">Pacific Islander</td>
-<td align="left">0.005</td>
+<td align="left">0.004</td>
 <td align="left">0.002</td>
 <td align="left">[0.00, 0.01]</td>
 <td align="left">0.001</td>
@@ -866,161 +863,161 @@ of participants per latent class (based on posterior class probability).
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.137</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">White/Caucasian</td>
-<td align="left">0.696</td>
-<td align="left">0.015</td>
-<td align="left">[0.67, 0.73]</td>
-<td align="left">0.674</td>
-<td align="left">0.017</td>
-<td align="left">[0.64, 0.71]</td>
+<td align="left">0.685</td>
+<td align="left">0.014</td>
+<td align="left">[0.66, 0.71]</td>
+<td align="left">0.660</td>
+<td align="left">0.016</td>
+<td align="left">[0.63, 0.69]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.280</td>
 </tr>
 <tr class="even">
-<td align="left"></td>
+<td align="left">Service (cov)</td>
 <td align="left">Currently Serving</td>
-<td align="left">0.280</td>
+<td align="left">0.356</td>
 <td align="left">0.014</td>
-<td align="left">[0.25, 0.31]</td>
-<td align="left">0.242</td>
+<td align="left">[0.33, 0.38]</td>
+<td align="left">0.310</td>
 <td align="left">0.016</td>
-<td align="left">[0.21, 0.27]</td>
-<td align="left">29.169</td>
+<td align="left">[0.28, 0.34]</td>
+<td align="left">30.503</td>
 <td align="left">0.000</td>
-<td align="right">0.12</td>
-<td align="left"></td>
+<td align="right">0.11</td>
+<td align="left">0.046</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">No Military Service</td>
-<td align="left">0.312</td>
-<td align="left">0.015</td>
-<td align="left">[0.28, 0.34]</td>
-<td align="left">0.446</td>
-<td align="left">0.019</td>
-<td align="left">[0.41, 0.48]</td>
+<td align="left">0.265</td>
+<td align="left">0.013</td>
+<td align="left">[0.24, 0.29]</td>
+<td align="left">0.390</td>
+<td align="left">0.017</td>
+<td align="left">[0.36, 0.42]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.000</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">Veteran</td>
-<td align="left">0.408</td>
+<td align="left">0.379</td>
+<td align="left">0.014</td>
+<td align="left">[0.35, 0.41]</td>
+<td align="left">0.300</td>
 <td align="left">0.016</td>
-<td align="left">[0.38, 0.44]</td>
-<td align="left">0.312</td>
-<td align="left">0.017</td>
-<td align="left">[0.28, 0.35]</td>
+<td align="left">[0.27, 0.33]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.000</td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
+<td align="left">Method (DV)</td>
 <td align="left">Cutting</td>
-<td align="left">0.137</td>
-<td align="left">0.011</td>
+<td align="left">0.138</td>
+<td align="left">0.010</td>
 <td align="left">[0.12, 0.16]</td>
-<td align="left">0.198</td>
-<td align="left">0.014</td>
-<td align="left">[0.17, 0.23]</td>
-<td align="left">38.668</td>
+<td align="left">0.192</td>
+<td align="left">0.013</td>
+<td align="left">[0.17, 0.22]</td>
+<td align="left">42.475</td>
 <td align="left">0.000</td>
 <td align="right">0.14</td>
-<td align="left"></td>
+<td align="left">0.004</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">Hanging/Asphyxiation</td>
-<td align="left">0.128</td>
-<td align="left">0.011</td>
+<td align="left">0.130</td>
+<td align="left">0.010</td>
 <td align="left">[0.11, 0.15]</td>
-<td align="left">0.117</td>
-<td align="left">0.012</td>
-<td align="left">[0.09, 0.14]</td>
+<td align="left">0.118</td>
+<td align="left">0.011</td>
+<td align="left">[0.10, 0.14]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.417</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">Jumping</td>
-<td align="left">0.050</td>
-<td align="left">0.007</td>
+<td align="left">0.049</td>
+<td align="left">0.006</td>
 <td align="left">[0.04, 0.06]</td>
-<td align="left">0.058</td>
+<td align="left">0.060</td>
 <td align="left">0.008</td>
-<td align="left">[0.04, 0.07]</td>
+<td align="left">[0.04, 0.08]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.313</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">Other Method</td>
-<td align="left">0.064</td>
+<td align="left">0.067</td>
 <td align="left">0.008</td>
 <td align="left">[0.05, 0.08]</td>
-<td align="left">0.076</td>
-<td align="left">0.010</td>
-<td align="left">[0.06, 0.10]</td>
+<td align="left">0.085</td>
+<td align="left">0.009</td>
+<td align="left">[0.07, 0.10]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.181</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">Overdose</td>
-<td align="left">0.497</td>
-<td align="left">0.016</td>
-<td align="left">[0.47, 0.53]</td>
-<td align="left">0.506</td>
-<td align="left">0.018</td>
-<td align="left">[0.47, 0.54]</td>
+<td align="left">0.482</td>
+<td align="left">0.015</td>
+<td align="left">[0.45, 0.51]</td>
+<td align="left">0.494</td>
+<td align="left">0.017</td>
+<td align="left">[0.46, 0.53]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.719</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">Shooting</td>
-<td align="left">0.124</td>
-<td align="left">0.011</td>
-<td align="left">[0.10, 0.15]</td>
-<td align="left">0.046</td>
+<td align="left">0.134</td>
+<td align="left">0.010</td>
+<td align="left">[0.11, 0.15]</td>
+<td align="left">0.050</td>
 <td align="left">0.008</td>
-<td align="left">[0.03, 0.06]</td>
+<td align="left">[0.03, 0.07]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.000</td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
+<td align="left">Medical attention cat (DV)</td>
 <td align="left">1</td>
-<td align="left">0.275</td>
+<td align="left">0.293</td>
 <td align="left">0.014</td>
-<td align="left">[0.25, 0.30]</td>
-<td align="left">0.413</td>
+<td align="left">[0.27, 0.32]</td>
+<td align="left">0.439</td>
 <td align="left">0.019</td>
-<td align="left">[0.38, 0.45]</td>
-<td align="left">99.997</td>
+<td align="left">[0.40, 0.48]</td>
+<td align="left">106.373</td>
 <td align="left">0.000</td>
-<td align="right">0.24</td>
-<td align="left"></td>
+<td align="right">0.23</td>
+<td align="left">0.000</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
@@ -1034,49 +1031,49 @@ of participants per latent class (based on posterior class probability).
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.001</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3</td>
-<td align="left">0.213</td>
-<td align="left">0.014</td>
-<td align="left">[0.19, 0.24]</td>
-<td align="left">0.264</td>
-<td align="left">0.016</td>
-<td align="left">[0.23, 0.30]</td>
+<td align="left">0.210</td>
+<td align="left">0.013</td>
+<td align="left">[0.18, 0.24]</td>
+<td align="left">0.250</td>
+<td align="left">0.015</td>
+<td align="left">[0.22, 0.28]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.046</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">4</td>
-<td align="left">0.219</td>
+<td align="left">0.215</td>
 <td align="left">0.013</td>
 <td align="left">[0.19, 0.24]</td>
-<td align="left">0.171</td>
-<td align="left">0.015</td>
-<td align="left">[0.14, 0.20]</td>
+<td align="left">0.164</td>
+<td align="left">0.014</td>
+<td align="left">[0.14, 0.19]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.016</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">5</td>
-<td align="left">0.270</td>
-<td align="left">0.015</td>
-<td align="left">[0.24, 0.30]</td>
-<td align="left">0.099</td>
+<td align="left">0.260</td>
+<td align="left">0.013</td>
+<td align="left">[0.23, 0.29]</td>
+<td align="left">0.094</td>
 <td align="left">0.012</td>
-<td align="left">[0.08, 0.12]</td>
+<td align="left">[0.07, 0.12]</td>
 <td align="left"></td>
 <td align="left"></td>
 <td align="right"></td>
-<td align="left"></td>
+<td align="left">0.000</td>
 </tr>
 </tbody>
 </table>
